fix nav wrap with min-width, remove form style artifacts

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,3 +1,7 @@
+html {
+	min-width: 600px;
+}
+
 li {
 	list-style: none;
 	display: inline-block;
@@ -5,10 +9,7 @@ li {
 
 nav {
 	float: right;
-	form { 
-		display: inline-block;
-		padding-right: 10px;
-	}
+
 	li { 
 		padding-right: 10px;
 	}
@@ -28,6 +29,7 @@ img {
 	img {
 		min-width: 100%;
 		min-height: 100%;
+		max-width: 400px;
 		position: relative; /* allows repositioning */
     left: 100%; /* move the whole width of the image to the right */
     margin-left: -200%; /* magic! */
